--- a/vignettes/howto.Rmd
+++ b/vignettes/howto.Rmd
@@ -1,43 +1,59 @@
+## Basics
+### Why annotations?
+<img src="https://github.com/Sage-Bionetworks/annotationUI/blob/master/img/basics.png" width="500px" height="400px" />
+
+</br>
+
+### What is a manifest? 
+
+<img src="https://github.com/Sage-Bionetworks/annotationUI/blob/master/img/manifest.png" width="300px" height="300px" />
+
+</br>
+
 ## How to Construct a Synapse Annotation Manifest
 
 ### Search and find 
-
-#### Search table globally or by field(s)/column(s)
+  
+Search table globally, top search box, or by field(s)/column(s), bottom search boxes.  
 
 ![](../img/search1.png)
 <br>
-
-#### and find the projects containing the annotations that you need (ex. searching by column)
+  
+and find the modules containing the annotations that you need for your project (ex. searching by column)  
 
 ![](../img/search2.png)
 
 <hr/>
 
-### Select Sage Bionetworks projects
+### Select Sage Bionetworks projects  
 
-#### Then select those projects. Note that the project categories only list Sage Bionetworks projects annotations that have gone through extensive standardization procedures through scientists.
+You can filter the annotations modules that you need by selecting and deselecting the modules' category checkboxes. Note that the module categories only list Sage Bionetworks annotations that have gone through extensive standardization procedures through scientists.  
 
 ![](../img/select.png)
 
 <hr/>
 
-### Add annotations for manifest construction
+### Add annotations for manifest construction  
 
-#### You can add your projects annotations to the existing annotations. This data would only exist on your platform's session for user-defined manifest construction purposes.
+You can add your own projects' annotations to the existing annotation modules. 
 
-#### First you must provide your projects name by typing it in the text box. 
+1. Make sure that your projects's annotations module have the minimal fields/columns, _key_ and _value_ with rows formated as:  
+a. A key and it's associated values as a comma seperated list: ![](../img/format1.png)
+b. A key and a value in each row with repeating keys for those whom have multiple values: ![](../img/format2.png)
+
+_Note: This data would only exist on your platform's session for user-defined manifest construction purposes._  
+
+2. Then you must provide your projects' name by typing it in the _text box_. 
 
 ![](../img/add1.png)
 
-<br>
 
-#### then upload your annotations csv file with the minimum of key and value columns by browsing your directories.  
+3. upload your annotations' csv file.  
+_NOTE: you must provide a comma seperated csv file._
 
 ![](../img/add2.png)
 
-<br>
-
-#### you will see a message after your annotations upload has been completed with no errors.
+4. you will see a message after your annotations upload has been completed with no errors.
 
 ![](../img/add3.png)
 
@@ -45,7 +61,11 @@
 
 ### Download manifest
 
-#### Finally you can download the manifest you created 
+Finally you can download the manifest containing the annotations modules. 
+on each manifest you will find three excel sheets. 
+1. The first sheet is for updating annotations on synapse. 
+2. The second sheet is the dictionary for keys. 
+3. The third sheet is the dictionary for values. 
 
 ![](../img/download.png)
 
@@ -53,7 +73,7 @@
 
 ### Release versions 
 
-#### Sage Bionetworks annotations have release versions with the latest version being indicated on the shiny app title. Users are encouraged to place the used version number on their projects’ wiki. This will enable auditing the annotations fairly easily.
+Sage Bionetworks annotations have release versions with the latest version being indicated on the shiny app title. Users are encouraged to place the used version number on their synapse projects’ annotation. This will enable auditing the annotations over time fairly easily.
 
 ![](../img/releaseVersion.png)
 
